testsuite/tests/typing-recovery/effect_pattern_below_toplevel.compilers.reference
File "effect_pattern_below_toplevel.ml", line 15, characters 17-18:
15 |   | Some (effect A, _) -> "bar"
                      ^
Error: Syntax error: ")" expected
File "effect_pattern_below_toplevel.ml", line 15, characters 9-10:
15 |   | Some (effect A, _) -> "bar"
              ^
  This "(" might be unmatched
